# game_2048

./: CMakeLists.txt
cmake_modules/: FindSFML.cmake
headers/: Constants.h  Grid.h  Tile.h
src/: Grid.cpp  Tile.cpp  main.cpp
